test using real sensors

--- a/scripts/part1-재귀필터.ipynb
+++ b/scripts/part1-재귀필터.ipynb
@@ -331,7 +331,7 @@
     "\n",
     "plt.figure(figsize=(15, 8))\n",
     "\n",
-    "for i in range(len(alpha_arr)):\n",
+    "for i in range(len(alpha)):\n",
     "    prev = sonar_data[0]\n",
     "    for j in range(n_samples):\n",
     "        prev = LowPassFilter(alpha[i], prev, sonar_data[j])\n",
